QtBeef/src/Qt/qaccessible.bf

class QAccessibleTableCellInterface : IQAccessibleTableCellInterface
{
	private QAccessibleTableCellInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleTableCellInterface_OnIsSelected(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnIsSelected);
		CQt.QAccessibleTableCellInterface_OnColumnHeaderCells(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnColumnHeaderCells);
		CQt.QAccessibleTableCellInterface_OnRowHeaderCells(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnRowHeaderCells);
		CQt.QAccessibleTableCellInterface_OnColumnIndex(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnColumnIndex);
		CQt.QAccessibleTableCellInterface_OnRowIndex(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnRowIndex);
		CQt.QAccessibleTableCellInterface_OnColumnExtent(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnColumnExtent);
		CQt.QAccessibleTableCellInterface_OnRowExtent(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnRowExtent);
		CQt.QAccessibleTableCellInterface_OnTable(obj.ObjectPtr,  => QtBeef_QAccessibleTableCellInterface_OnTable);
	}
	static void QtBeef_QAccessibleTableCellInterface_OnIsSelected(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnIsSelected();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnColumnHeaderCells(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnColumnHeaderCells();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnRowHeaderCells(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRowHeaderCells();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnColumnIndex(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnColumnIndex();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnRowIndex(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRowIndex();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnColumnExtent(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnColumnExtent();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnRowExtent(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRowExtent();
	}
	static void QtBeef_QAccessibleTableCellInterface_OnTable(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnTable();
	}
	public this(QAccessibleTableCellInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleTableCellInterface_Delete(this.ptr);
	}
	public  virtual bool OnIsSelected()
	{
		return default;
	}
	public  virtual void* OnColumnHeaderCells()
	{
		return default;
	}
	public  virtual void* OnRowHeaderCells()
	{
		return default;
	}
	public  virtual c_int OnColumnIndex()
	{
		return default;
	}
	public  virtual c_int OnRowIndex()
	{
		return default;
	}
	public  virtual c_int OnColumnExtent()
	{
		return default;
	}
	public  virtual c_int OnRowExtent()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnTable()
	{
		return default;
	}
}
interface IQAccessibleTableCellInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleTableCellInterface_Delete")]
	public static extern void QAccessibleTableCellInterface_Delete(QAccessibleTableCellInterface_Ptr self);
	[LinkName("QAccessibleTableCellInterface_IsSelected")]
	public static extern bool QAccessibleTableCellInterface_IsSelected(void* self);
	
	public function void QAccessibleTableCellInterface_OnIsSelected_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnIsSelected")]
	public static extern bool QAccessibleTableCellInterface_OnIsSelected(void* self, QAccessibleTableCellInterface_OnIsSelected_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperIsSelected")]
	public static extern bool QAccessibleTableCellInterface_SuperIsSelected(void* self);
	[LinkName("QAccessibleTableCellInterface_ColumnHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_ColumnHeaderCells(void* self);
	
	public function void QAccessibleTableCellInterface_OnColumnHeaderCells_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnColumnHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_OnColumnHeaderCells(void* self, QAccessibleTableCellInterface_OnColumnHeaderCells_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperColumnHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_SuperColumnHeaderCells(void* self);
	[LinkName("QAccessibleTableCellInterface_RowHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_RowHeaderCells(void* self);
	
	public function void QAccessibleTableCellInterface_OnRowHeaderCells_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnRowHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_OnRowHeaderCells(void* self, QAccessibleTableCellInterface_OnRowHeaderCells_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperRowHeaderCells")]
	public static extern void* QAccessibleTableCellInterface_SuperRowHeaderCells(void* self);
	[LinkName("QAccessibleTableCellInterface_ColumnIndex")]
	public static extern c_int QAccessibleTableCellInterface_ColumnIndex(void* self);
	
	public function void QAccessibleTableCellInterface_OnColumnIndex_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnColumnIndex")]
	public static extern c_int QAccessibleTableCellInterface_OnColumnIndex(void* self, QAccessibleTableCellInterface_OnColumnIndex_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperColumnIndex")]
	public static extern c_int QAccessibleTableCellInterface_SuperColumnIndex(void* self);
	[LinkName("QAccessibleTableCellInterface_RowIndex")]
	public static extern c_int QAccessibleTableCellInterface_RowIndex(void* self);
	
	public function void QAccessibleTableCellInterface_OnRowIndex_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnRowIndex")]
	public static extern c_int QAccessibleTableCellInterface_OnRowIndex(void* self, QAccessibleTableCellInterface_OnRowIndex_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperRowIndex")]
	public static extern c_int QAccessibleTableCellInterface_SuperRowIndex(void* self);
	[LinkName("QAccessibleTableCellInterface_ColumnExtent")]
	public static extern c_int QAccessibleTableCellInterface_ColumnExtent(void* self);
	
	public function void QAccessibleTableCellInterface_OnColumnExtent_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnColumnExtent")]
	public static extern c_int QAccessibleTableCellInterface_OnColumnExtent(void* self, QAccessibleTableCellInterface_OnColumnExtent_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperColumnExtent")]
	public static extern c_int QAccessibleTableCellInterface_SuperColumnExtent(void* self);
	[LinkName("QAccessibleTableCellInterface_RowExtent")]
	public static extern c_int QAccessibleTableCellInterface_RowExtent(void* self);
	
	public function void QAccessibleTableCellInterface_OnRowExtent_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnRowExtent")]
	public static extern c_int QAccessibleTableCellInterface_OnRowExtent(void* self, QAccessibleTableCellInterface_OnRowExtent_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperRowExtent")]
	public static extern c_int QAccessibleTableCellInterface_SuperRowExtent(void* self);
	[LinkName("QAccessibleTableCellInterface_Table")]
	public static extern void** QAccessibleTableCellInterface_Table(void* self);
	
	public function void QAccessibleTableCellInterface_OnTable_action(void* self);
	[LinkName("QAccessibleTableCellInterface_OnTable")]
	public static extern void** QAccessibleTableCellInterface_OnTable(void* self, QAccessibleTableCellInterface_OnTable_action _action);
	
	[LinkName("QAccessibleTableCellInterface_SuperTable")]
	public static extern void** QAccessibleTableCellInterface_SuperTable(void* self);
	[LinkName("QAccessibleTableCellInterface_OperatorAssign")]
	public static extern void QAccessibleTableCellInterface_OperatorAssign(void* self, void** param1);
}
// --------------------------------------------------------------
// QAccessibleTableInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleTableInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public QAccessibleInterface_Ptr Caption()
	{
		return QAccessibleInterface_Ptr(CQt.QAccessibleTableInterface_Caption((.)this.Ptr));
	}
	public QAccessibleInterface_Ptr Summary()
	{
		return QAccessibleInterface_Ptr(CQt.QAccessibleTableInterface_Summary((.)this.Ptr));
	}
	public QAccessibleInterface_Ptr CellAt(c_int row, c_int column)
	{
		return QAccessibleInterface_Ptr(CQt.QAccessibleTableInterface_CellAt((.)this.Ptr, row, column));
	}
	public c_int SelectedCellCount()
	{
		return CQt.QAccessibleTableInterface_SelectedCellCount((.)this.Ptr);
	}
	public void* SelectedCells()
	{
		return CQt.QAccessibleTableInterface_SelectedCells((.)this.Ptr);
	}
	public void ColumnDescription(String outStr, c_int column)
	{
		CQt.QAccessibleTableInterface_ColumnDescription((.)this.Ptr, column);
	}
	public void RowDescription(String outStr, c_int row)
	{
		CQt.QAccessibleTableInterface_RowDescription((.)this.Ptr, row);
	}
	public c_int SelectedColumnCount()
	{
		return CQt.QAccessibleTableInterface_SelectedColumnCount((.)this.Ptr);
	}
	public c_int SelectedRowCount()
	{
		return CQt.QAccessibleTableInterface_SelectedRowCount((.)this.Ptr);
	}
	public c_int ColumnCount()
	{
		return CQt.QAccessibleTableInterface_ColumnCount((.)this.Ptr);
	}
	public c_int RowCount()
	{
		return CQt.QAccessibleTableInterface_RowCount((.)this.Ptr);
	}
	public void* SelectedColumns()
	{
		return CQt.QAccessibleTableInterface_SelectedColumns((.)this.Ptr);
	}
	public void* SelectedRows()
	{
		return CQt.QAccessibleTableInterface_SelectedRows((.)this.Ptr);
	}
	public bool IsColumnSelected(c_int column)
	{
		return CQt.QAccessibleTableInterface_IsColumnSelected((.)this.Ptr, column);
	}
	public bool IsRowSelected(c_int row)
	{
		return CQt.QAccessibleTableInterface_IsRowSelected((.)this.Ptr, row);
	}
	public bool SelectRow(c_int row)
	{
		return CQt.QAccessibleTableInterface_SelectRow((.)this.Ptr, row);
	}
	public bool SelectColumn(c_int column)
	{
		return CQt.QAccessibleTableInterface_SelectColumn((.)this.Ptr, column);
	}
	public bool UnselectRow(c_int row)
	{
		return CQt.QAccessibleTableInterface_UnselectRow((.)this.Ptr, row);
	}
	public bool UnselectColumn(c_int column)
	{
		return CQt.QAccessibleTableInterface_UnselectColumn((.)this.Ptr, column);
	}
	public void ModelChange(IQAccessibleTableModelChangeEvent event)
	{
		CQt.QAccessibleTableInterface_ModelChange((.)this.Ptr, (.)event?.ObjectPtr);
	}
}
